assets/vsn/css/custom.css
/* ... */
body > .container-fluid > .row-fluid {
    -ms-box-orient: horizontal;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -moz-flex;
    display: -webkit-flex;
    display: flex;

    -webkit-flex-flow: row;
    flex-flow: row;
}

#main {
    order:2;
    margin-top:15px;
    padding-top: 5px;
    position: relative;
}

#main [class^=col] {
    padding-left:.3em;
    padding-right:.3em;
}
#main .row {
    margin-right: -.3em;
    margin-left: -.3em;
}

.entry-view {
    color:rgb(222,209,167);
    margin-bottom: 40px;
    padding-bottom:10px;
    border-bottom: 2px solid rgba(222,209,167, .5);
}

.entry {
    margin-bottom:45px;
}

.entry-content .std {
    font-size:14px;
    margin-top:10px;
    padding: 10px 10px 0;
    color:rgb(222,209,167);
    font-weight: 300;
    border-top: 2px solid rgba(222,209,167, .5);
}
.entry-page .entry-content .std {
    padding: 10px;
    border-bottom: 2px solid rgba(222,209,167, .5);
    margin-bottom: 10px;
}

.entry-preview-image {
    display:block;
    padding-bottom:15px;
}

.entry-date {
    float:right;
    font-weight:400;
    margin: 0;
}
.entry-view .entry-date {
    font-family: 'Courgette', sans-serif;
    font-size:15px;
    margin-top: 8px;
}

.entry-title {
    float:left;
    margin:0;
    padding-bottom: 5px;
    color:rgb(68,114,88);
    font-size: 22px;
    line-height: normal;
    font-weight: 400;
}

.entry-view .entry-title {
    font-family: 'Patua One', serif;
}

.entry-view .entry-title a {
    /* color:rgb(68,114,88); */
}

.content-title {
    font-size: 26px;
    font-weight: normal;
    margin: .5em 0;
    font-family: 'Courgette', sans-serif;
    color:rgb(68,114,88);
    text-align:center;
}
.subtitle {
    font-family:'Patua One', serif;
    margin: 25px 0 0;
    clear: both;
    text-align: center;
}
.subtitle:first-of-type {
    margin-top:0;
}
.entry-images .image-box {
    padding:0 0 10px;
}

.mobile-preview img {
    width: 343px;
}

.entry-view strong {
    font-size:18px;
    margin: 5px 0;
    font-family: 'Courgette', sans-serif;
    color: rgb(134,155,122);
}
.header-banner {
    background-position: 50% 50%;
}

.header-banner.banner-border {
    background-color:rgb(255,181,112);
    background-blend-mode:soft-light;
    padding: 9px;
    margin: -10px -25px 0;
}
.header-banner.banner-background {
    border: 1px solid rgb(222,209,167);
    height: 142px;
    position:relative;
}
.header-banner.banner-feature {
    height: 160px;
    margin: -10px;
}
.ad {
    overflow:hidden;
    background:url(../images/no-ad.png) 50% 50%;
    min-height: 90px;
    /*background: rgb(255,181,112);*/
}
.ad.top {
    margin: -5px 0 0;
}
.ad.middle{
    margin: -20px -15px 20px;
}
.ad.bottom {
    margin: 50px 0 0;
}
#sidebar .ad {
    padding: 0 0 15px;
}

.logo img {
    height: 80%;
    width:auto;
    background: transparent;
}

.logo {
    height: 134px;
    position: absolute;
    left: 10px;
    top: 3px;
    min-width: 340px;
    background-color: rgb(68,114,88);
    background-color: rgba(68,114,88,.7);
    width: 30%;
    text-align: center;
}

.right .logo {
    right:10px;
}

.social-media li {
    float:left;
}
.social-media li a {
    display: block;
    background: url(../images/social-media-icons-small.png) 0 0 no-repeat;
    padding-right:10px;
    height:24px;
    margin-bottom:3px;
    line-height: 26px;
    text-indent:28px;
}
.social-media li a.twitter { background-position: 0 -24px; }
.social-media li a.tapiture { background-position: 0 -48px; }
.social-media li a.pinterest { background-position: 0 -72px; }

.entry-view .social-media li {
    float:none;
}

#sidebar {
    order:1;
    background: rgba(68,114,88,.5);
    position: relative;
    color:rgb(134,155,122);
    margin: 15px 0 0;
    padding: 15px;
    border-top: 15px solid rgb(255,181,112);
}
#sidebar a img {
    margin-bottom:8px;
}
#sidebar .social-contact {
    text-align: center;
    padding: 2px;
}
#sidebar .social-contact li {
    display: inline-block;
    text-indent: -9999px;
    height: 32px;
    width: 32px;
    margin: 10px;
}
#sidebar .social-contact li:last-of-type {
    margin-right:0;
}
#sidebar .social-contact li a {
    display: block;
    height: 32px;
    width: 32px;
    background: url(../images/social-media-icons.png) 0 0 no-repeat;
}
#sidebar .social-contact li.twitter a { background-position: 0 -32px; }
#sidebar .social-contact li.tapiture a { background-position: 0 -64px; }
#sidebar .social-contact li.pinterest a { background-position: 0 -96px; }

.sidebar-head,
.content-head {
    background: rgb(68,114,88);
    border-top:1px solid rgba(255,255,255,.3);
    border-bottom: 1px solid rgba(0,0,0,.3);
    width:100%;
    height: 18px;
    position: absolute;
    top:0;
    left:0;
}

#sidebar .section-head, .social-contact {
    font-size: 18px;
    border-top: 1px solid rgba(0,0,0,.5);
    padding: 10px 0 6px;
    font-family: 'Courgette', sans-serif;
    margin: 0;
}
#sidebar .section-head:first-of-type,
#sidebar .social-contact:first-of-type {
    border:none;
    padding-top: 0;
}

#sidebar a {
    font-size: 14px;
    text-decoration:none;
}

#sidebar ul {
    list-style:none outside none;
    margin:0;
    overflow:auto;
}

#sidebar ul li {
    margin-left:10px;
    text-indent: -10px;
}

ul.years {
    text-align: center;
    margin: 0 auto 1em;
    max-width: 400px;
}

ul.years li {
    display: inline-block;
    margin-right: 9px;
}

#sidebar .tops .entry-date {
    display:none;
}

.entry-grid {
    clear:both;
    list-style: none;
}
.entry-grid > div {
    padding-left:7px;
    padding-right:7px;
}

.entry-grid .entry-images .image {
    padding:0 5px;
}
.entry-grid .entry-item {
    float:left;
}

.entry-grid .entry-title {
    font-size:14px;
    height: 38px;
    display: table;
}

.entry-grid .entry-title a {
    display: table-cell;
    vertical-align: bottom;
}

.entry-grid .entry-date {
    font-size:13px;
}
.entry-item.ultrawide .entry-title {
    height:auto;
}
/* ... */

